-added theme description -fixed menu sizes and color -fixed body misalignments

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -8,6 +8,8 @@ $sidebar-sm-columns:    4;
 // Colors
 $brand-primary:         #0D0D0D;
 $primary-text:          #fff;
+$links:                 #777;
+$borders:               #464646;
 
 // positioning
 $general-position:      center;
@@ -16,3 +18,5 @@ $general-position:      center;
 $menu-textcolor:        #fff;
 $menu-background:       #e46c0a;
 $menu-hover-background: #f7994b;
+$main-menu-font-size:   22px;
+$body-font-size:        18px;
